@@ -141,7 +141,7 @@ public class SpawnNpcTable {
 					l1spawn.setName(l1npc.getName());
 					l1spawn.init();
 					spawnCount += l1spawn.getAmount();
-					_spawntable.put(new Integer(l1spawn.getId()), l1spawn);
+					_spawntable.put(Integer.valueOf(l1spawn.getId()), l1spawn);
 					if (l1spawn.getId() > _highestId) {
 						_highestId = l1spawn.getId();
 					}
